--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get_it: ^8.2.0
+  go_router: ^16.2.4
 
 dev_dependencies:
   flutter_test:
