--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
   get_it: ^8.2.0
   go_router: ^16.2.4
-
+  talker: ^5.0.1
+  talker_flutter: ^5.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -19,3 +20,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+    assets:
+    - assets/images/ 
