--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
 
 dependencies:
   bloc: ^9.0.1
+  cloud_firestore: ^6.1.2
   dio: ^5.9.0
   equatable: ^2.0.7
+  firebase_auth: ^6.1.4
+  firebase_core: ^4.4.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
